[package]
name = "yew"
version = "0.1.0"
authors = ["nujz <nujz@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
num_cpus = "1.13"

tokio = { version = "1.2", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode", "json"] }

futures = "0.3"
# futures-util = "0.3"

# pin-project = "0.4"
pin-project-lite = "0.2"

ring = "0.16"

# serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# flate2 = "1.0"

anyhow = "1.0"

# env_logger = "0.8"

# [[bin]]
# name = "main"
# path = "bin/main.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"
